ktp-desktop-applets (15.04.3-1) UNRELEASED; urgency=medium

  * Apply homepage update patch from Matthew Cope
  * Update Diane Trout's email address.
  * Update watch file for KTp's move to Applications.
  * New upstream release.
  * Update build dependencies for move to Qt5 and rename of
    libktpcommoninternalsprivate-dev to libktp-dev

 -- Diane Trout <diane@debian.org>  Wed, 27 May 2015 23:08:00 -0700

ktp-desktop-applets (0.9.0-1) unstable; urgency=medium

  * New upstream release.
  * Update copyright file.
  * Update build-depends for libktpcommoninternalsprivate-dev to 0.9.0
  * Update depends for kde-telepathy-declarative to source:Upstream-Version
  * Update Standards-Version to 3.9.6. No changes needed.
  * Update debian/watch file to use http://download.kde.org

 -- Diane Trout <diane@ghic.org>  Sat, 25 Apr 2015 19:58:23 -0700

ktp-desktop-applets (0.8.1-1) unstable; urgency=medium

  * New upstream release
  * Update Standards-Version to 3.9.5. No changes needed.
  * Bump build-depends libktpcommoninternalsprivate-dev to 0.8.1
  * Bump depends kde-telepathy-declarative to 0.8.1
  * Update debian/changelog. Was missing copyrights for translations.

 -- Diane Trout <diane@ghic.org>  Fri, 16 May 2014 21:03:32 -0700

ktp-desktop-applets (0.7.0-1) unstable; urgency=low

  * New upstream release.
  * Fix typo in description (Thanks Pablo D. Pareja Obregón for
    the report)
  * Bump build-depends libktpcommoninternalsprivate-dev to 0.7.0
  * Bump depends kde-telepathy-declarative to 0.7.0

 -- Diane Trout <diane@ghic.org>  Wed, 27 Nov 2013 18:12:52 -0800

ktp-desktop-applets (0.6.3-2) unstable; urgency=low

  * Team upload.

  [ Diane Trout ]
  * Remove unneeded Build-Depends libktpchat and kde-telepathy-declarative

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 04 Sep 2013 22:20:15 -0300

ktp-desktop-applets (0.6.3-1) unstable; urgency=low

  [ George Kiagiadakis ]
  * Initial release.

  [ Diane Trout ]
  * New upstream release.