@@ -1,4 +1,9 @@
 #!/usr/bin/make -f
 
-%:
-	dh $@ --parallel --with kde --dbg-package=kde-telepathy-desktop-applets-dbg --list-missing
+include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
+
+override_dh_strip:
+	$(overridden_command) --dbg-package=kde-telepathy-desktop-applets-dbg
+
+override_dh_install:
+	$(overridden_command) --fail-missing
